# scrappy

./: .gitignore  404.html  LICENSE  README.rst  changelog.md  index.html  mkdocs.yml  objects.inv  requirements.txt  setup.cfg
.github/workflows/: ci.yml
changelog/: index.html
docs/: index.md  sc-beam-plot.md  sc-bokehplot.md  sc-depol.md  sc-houdini.md  sc-ifit.md  sc-los.md  sc-losrm.md  sc-rmmap.md  scrappy.md  showrunner.md
post/: showrunner.sh
posta/: bk_plots.yml  env-vars  pica_box_region.reg  pica_noise_region.reg  showrunner.sh
sc-beam-plot/: index.html
sc-bokehplot/: index.html
sc-depol/: index.html
sc-houdini/: index.html
sc-ifit/: index.html
sc-los/: index.html
sc-losrm/: index.html
sc-rmmap/: index.html
search/: search_index.json
showrunner/: index.html
src/: main.py
src/bkplots/: plot_bk.py
src/imageops/: new_fit.py  plot_bmaj_bmin.py  simple_mask.py
src/rmsynthesis/: fit-qu-cube-random-x2.py  new_fit.py  rm_synthesis.py  rmmap_x2.py
src/scrap/: arguments.py  image_utils.py  plotting.py  scraplog.py  scrappy.py
src/utils/: __init__.py  genutils.py  logger.py  mathutils.py  rmmath.py
