[metadata]
#check gist for reference
name = scrappy
version = attr:__version__
author = Lexy Andati
author_email = landati@duck.com
description = Generate polarimetric spectra on independent lines of sight across a source
long_description = file: README.rst
long_description_content_type = text/rst
url = https://github.com/scrappy
license = MIT
classifiers = 
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Astronomy


[options]
packages = 
    bkplots
    imageops
    rmsynthesis
    scrap
    utils

package_dir = 
    =src
    
python_requires = >=3.8
install_requires = 
    astropy
    bokeh==2.4.3
    regions
    numpy
    matplotlib
    natsort
    scipy

[options.extras_require]
# when needed
casa = casatasks

[options.entry_points]
console_scripts = 
    sc-los = scrap.scrappy:console
    sc-losrm = rmsynthesis.rm_synthesis:console
    sc-rmmap = rmsynthesis.rmmap_x2:console
    sc-bokehplot = bkplots.plot_bk:console
    sc-ifit = rmsynthesis.new_fit:console
    sc-beam-plot = imageops.plot_bmaj_bmin:console
    sc-houdini = imageops.simple_mask:console
    scrappy = main:console